Fix z-index issues with temporal display and map controls

--- a/app/assets/stylesheets/modules/layout.css.scss
+++ b/app/assets/stylesheets/modules/layout.css.scss
@@ -82,7 +82,7 @@ footer, .toolbar {
   position: absolute;
   color: #fff;
   background: rgba(22,22,22,.9);
-  z-index: 60;
+  z-index: 59;
   padding: 8px 12px;
   border-radius: 5px;
   top: 15px;
